--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,26 @@
 @font-face {
-  font-family: 'digital-7';
-  src: local('digital-7'), url('./fonts/digital-7.ttf') format('truetype');
+  font-family: "digital-7";
+  src: local("digital-7"), url("./fonts/digital-7.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Inter UI Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Inter UI Regular"),
+    url("./fonts/Inter-UI-Regular.woff") format("woff");
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Inter UI Regular", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
